--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <canvas id="cobrinhaCanvas" width="400" height="400"></canvas>
+    <canvas id="cobrinhaCanvas"></canvas>
     <div id="pontuacao">Pontuação: 0</div>
     <script src="script.js"></script>
 </body>
