--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jogo da Cobrinha Detalhado</title>
+    <title>Jogo da Cobrinha Avançado</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,4 +11,4 @@
     <div id="pontuacao">Pontuação: 0</div>
     <script src="script.js"></script>
 </body>
-</html> 
+</html>
